[#25] Fix the "Create event" is not visible on android phones

--- a/source/scripts/components/page/page.css
+++ b/source/scripts/components/page/page.css
@@ -6,7 +6,6 @@
 	bottom: 0;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
 }
 
 .header,
